--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -17,4 +17,7 @@ spring.jpa.defer-datasource-initialization=true
 
 # configuracion jwt
 jwt.secret=EstaEsUnaClaveSecreta
+
+# token 1 hora, refresh token 1 dia
 jwt.expirationMs=3600000
+jwt.refreshExpirationMs=86400000
