--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # En producción solo queremos actualizar el esquema, no recrearlo
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 # No cargamos data.sql en prod
 spring.sql.init.mode=always
@@ -19,3 +19,4 @@ spring.jpa.defer-datasource-initialization=true
 # JWT
 jwt.secret=EstaEsUnaClaveSecreta
 jwt.expirationMs=3600000
+jwt.refreshExpirationMs=86400000
