--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,9 @@
 spring.application.name=app-backend
 
 # JDBC URL apuntando al contenedor MySQL local (puerto host 3315 ? contenedor 3306)
-spring.datasource.url=jdbc:mysql://localhost:3315/database-main-local?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3315/database-main-local?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Bogota
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Bogota
+spring.jackson.time-zone=America/Bogota
 spring.datasource.username=app_user
 spring.datasource.password=userpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
