--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,7 +2,9 @@ spring.application.name=app-backend
 
 # Datos de conexión **dentro** de Docker:
 # el host es el nombre del servicio MySQL (mysql) y el puerto interno 3306
-spring.datasource.url=jdbc:mysql://mysql:3306/database-main-production?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/database-main-production?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Bogota
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Bogota
+spring.jackson.time-zone=America/Bogota
 spring.datasource.username=app_user
 spring.datasource.password=userpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # No cargamos data.sql en prod
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.platform=mysql
 spring.jpa.defer-datasource-initialization=true
 
